[package]
name = "optbuilder"
version = "0.1.2"
authors = ["Adilson Neto <almeidneto@gmail.com>"]
edition = "2018"

readme = "README.md"

keywords = ["builder", "macro"]
categories = ["development-tools"]

description = "A optional builder derive macro for helping with big constructors with mostly optional parameters"
repository = "https://github.com/aaneto/optbuilder"
license = "MIT"


[lib]
proc-macro = true

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
proc-macro2 = "1.0.19"
